Enhancement: Smart caching, Tools tab with hidden settings and Activity Launcher

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,11 @@
         android:label="@string/nav_apps" />
 
     <fragment
+        android:id="@+id/toolsFragment"
+        android:name="com.appcontrolx.ui.ToolsFragment"
+        android:label="@string/nav_tools" />
+
+    <fragment
         android:id="@+id/settingsFragment"
         android:name="com.appcontrolx.ui.SettingsFragment"
         android:label="@string/nav_settings" />
