--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/ic_apps"
         android:title="@string/nav_apps" />
     <item
+        android:id="@+id/toolsFragment"
+        android:icon="@drawable/ic_tools"
+        android:title="@string/nav_tools" />
+    <item
         android:id="@+id/settingsFragment"
         android:icon="@drawable/ic_settings"
         android:title="@string/nav_settings" />
