--- a/app/src/main/res/layout/bottom_sheet_actions.xml
+++ b/app/src/main/res/layout/bottom_sheet_actions.xml
@@ -100,4 +100,45 @@
             style="@style/Widget.Material3.Button.OutlinedButton" />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data &amp; Launch"
+        android:textColor="@color/on_surface_secondary"
+        android:textSize="12sp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnClearCache"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/action_clear_cache"
+            style="@style/Widget.Material3.Button.OutlinedButton" />
+
+        <Button
+            android:id="@+id/btnClearData"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="8dp"
+            android:text="@string/action_clear_data"
+            android:textColor="@color/warning_color"
+            style="@style/Widget.Material3.Button.OutlinedButton" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnLaunchApps"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/action_launch_apps"
+        style="@style/Widget.Material3.Button.TonalButton" />
+
 </LinearLayout>
